2006-02-17  Frank Lichtenheld  <djpig@debian.org>

	* C/po/*.pot: Update.


Older changes are documented in the top-level ChangeLog