@@ -2,5 +2,8 @@
 
 	* C/po/*.pot: Update.
 
+	* Makefile.am (updatepo): New target that calls
+	`make updatepo' in all subdirectories.
+
 
 Older changes are documented in the top-level ChangeLog
